[package]
name = "spotisub"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.12.1"
anyhow = "1.0.101"
async-stream = "0.3.6"
audioadapter = "2.0.0"
audioadapter-buffers = "2.0.0"
audiopus = "0.2.0"
bytemuck = "1.25.0"
bytes = "1.11.1"
chrono = { version = "0.4.43", features = ["serde"] }
clap = { version = "4.5.59", features = ["derive"] }
env_logger = "0.11.9"
hex = "0.4.3"
librespot = "0.8.0"
local-ip-address = "0.6.10"
log = "0.4.29"
md-5 = "0.10.6"
ogg = "0.9.2"
parking_lot = "0.12.5"
rand = "0.10.0"
reqwest = "0.13.2"
rspotify = "0.15.3"
rubato = "1.0.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["rt-multi-thread", "macros"] }
zerocopy = { version = "0.8.39", features = ["derive"] }

# temp fix
vergen = "=9.0.6"
vergen-gitcl = "=1.0.8"
vergen-lib = "=0.1.6"

[profile.release]
lto = true
codegen-units = 1